<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.titanium</groupId>
        <artifactId>titanium-policy</artifactId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>

    <artifactId>titanium-policy-domain</artifactId>
    <name>titanium-policy-domain</name>
    <description>保单系统 - 领域层</description>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- 公共模块 -->
        <dependency>
            <groupId>com.titanium</groupId>
            <artifactId>titanium-policy-common</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>
        <!-- 通用内核（聚合根基类 BaseAggregate 等共享构件） -->
        <dependency>
            <groupId>com.titanium</groupId>
            <artifactId>titanium-common</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>
        <!-- 元数据模块 -->
        <dependency>
            <groupId>com.titanium</groupId>
            <artifactId>titanium-metadata</artifactId>
        </dependency>
        
        <!-- Axon Framework -->
        <dependency>
            <groupId>org.axonframework</groupId>
            <artifactId>axon-spring-boot-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <scope>test</scope>
        </dependency>


        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.axonframework</groupId>
            <artifactId>axon-test</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- 禁用Spring Boot Maven Plugin的repackage目标，因为这是一个领域层模块，不需要主类 -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>repackage</id>
                        <phase>none</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>